[gd_scene load_steps=11 format=2]

[ext_resource path="res://scene/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Plateforme_static.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scene/Mur.tscn" type="PackedScene" id=4]
[ext_resource path="res://scene/Plateforme_horizontal.tscn" type="PackedScene" id=5]
[ext_resource path="res://scene/Plateforme_verticale.tscn" type="PackedScene" id=6]
[ext_resource path="res://scene/Plateforme_bouge.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/Plateforme_bouge_diagonale.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/Plateforme_rotation.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1968, 8 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Plateforme_rotation" parent="." instance=ExtResource( 9 )]
position = Vector2( 1272, 184 )

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 16, 144 )

[node name="Vie" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Plateforme_d√©part" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 176 )

[node name="Plateforme_static2" parent="." instance=ExtResource( 2 )]
position = Vector2( 112, 232 )

[node name="Plateforme_static3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1096, 120 )

[node name="Plateforme_static4" parent="." instance=ExtResource( 2 )]
position = Vector2( 1400, 256 )

[node name="Plateforme_final" parent="." instance=ExtResource( 2 )]
position = Vector2( 1792, 480 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 872, 616 )
shape = SubResource( 1 )

[node name="Mur" parent="." instance=ExtResource( 4 )]
position = Vector2( 248, 0 )

[node name="Mur3" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, 200 )

[node name="Mur4" parent="." instance=ExtResource( 4 )]
position = Vector2( 528, -224 )

[node name="Mur5" parent="." instance=ExtResource( 4 )]
position = Vector2( 1536, 136 )

[node name="Mur6" parent="." instance=ExtResource( 4 )]
position = Vector2( 1536, -284 )

[node name="Mur2" parent="." instance=ExtResource( 4 )]
position = Vector2( 384, 64 )

[node name="Plateforme_horizontal" parent="." instance=ExtResource( 5 )]
position = Vector2( 192, 440 )

[node name="Plateforme_horizontal2" parent="." instance=ExtResource( 5 )]
position = Vector2( 768, 64 )

[node name="Plateforme_verticale" parent="." instance=ExtResource( 6 )]

[node name="Plateforme_verticale2" parent="." instance=ExtResource( 6 )]

[node name="Plateforme_bouge" parent="." instance=ExtResource( 7 )]
position = Vector2( 424, 248 )

[node name="Plateforme_bouge_diagonale" parent="." instance=ExtResource( 8 )]
position = Vector2( 584, 232 )
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
